[package]
name = "bb8-redis-cluster"
version = "0.3.0"
description = "Full-featured async (tokio-based) redis cluster connection pool (like r2d2)"
license = "BSD-2-Clause"
repository = "https://github.com/0xWOF/bb8-redis-cluster"
edition = "2021"
rust-version = "1.56"

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
redis = { version = "0.25.2", features = ["tokio-comp", "cluster-async"] }

[dev-dependencies]
futures-util = "0.3.15"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
